correciones de seguridad y registro de ususario

--- a/src/Biblioteca/UserBundle/Resources/views/usuario/index.html.twig
+++ b/src/Biblioteca/UserBundle/Resources/views/usuario/index.html.twig
@@ -29,7 +29,7 @@
                 <th><i class="fa fa-user"></i> Usuario</th>
                 <th>Rol</th>
                 <th><i class="fa fa-calendar"></i> Último Acceso</th>
-                {#<th><i class="fa fa-cogs"></i> Acciones</th>#}
+                <th><i class="fa fa-cogs"></i> Estado</th>
             </tr>
         </thead>
         <tbody>
@@ -44,23 +44,20 @@
                     </ul>
                 </td>
                 <td>{% if user.lastLogin %}{{ user.lastLogin|date('Y-m-d H:i') }}{% else %}nunca{% endif %}</td>
-                {#<td>
+                <td>
                     <div class="item-actions">
-                        {% if not user.locked %}
-                            <a href="{{ path('user_toblock', { id: user.id }) }}" class="btn btn-sm btn-danger">
-                                <i class="fa fa-lock"></i>&nbsp;Bloquear</a>
-                        {% else %}
-                            <a href="{{ path('user_toblock', { id: user.id }) }}" class="btn btn-sm btn-default">
-                                <i class="fa fa-unlock"></i>&nbsp;Desbloquear</a>
+                        {% if user.locked %}
+                            <p class="alert-danger"><i class="fa fa-lock"></i>&nbsp;Bloqueado</a>
                         {% endif %}
                         {% if not user.enabled %}
-                            <a href="{{ path('user_show', { id: user.id }) }}" class="btn btn-sm btn-success">
-                                <i class="fa fa-check"></i>&nbsp;Confirmar cuenta</a>
+                            <p class="alert-danger">&nbsp;Desabilitado</p>
                         {% endif %}
-                            <a href="{{ path('user_show', { id: user.id }) }}" class="btn btn-sm btn-warning">
-                                <i class="fa fa-edit"></i>&nbsp;Editar</a>
+                        {% if not user.locked and user.enabled %}
+                            <p class="alert-success"><i class="fa fa-check"></i>&nbsp;Normal</p>
+                        {% endif %}
+
                     </div>
-                </td>#}
+                </td>
             </tr>
         {% endfor %}
         </tbody>
