--- a/src/Biblioteca/UserBundle/Resources/views/Profile/show_content.html.twig
+++ b/src/Biblioteca/UserBundle/Resources/views/Profile/show_content.html.twig
@@ -5,54 +5,70 @@
     </div>
     <div class="panel-body">
 
-<div class="row form-horizontal" role="form">
-<div class="col-md-6 col-md-12">
-    <div class="form-group">
-        <label class="col-sm-2 col-md-6 control-label">{{ 'profile.show.username'|trans }}</label>
-        <div class="col-sm-10 col-md-6">
-            <p class="form-control-static">{{ user.username }}</p>
+        <div class="row form-horizontal" role="form">
+            <div class="col-md-6 col-md-12">
+                <div class="form-group">
+                    <label class="col-sm-2 col-md-6 control-label">{{ 'profile.show.username'|trans }}</label>
+                    <div class="col-sm-10 col-md-6">
+                        <p class="form-control-static">{{ user.username }}</p>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 col-md-6 control-label">{{ 'profile.show.email'|trans }}</label>
+                    <div class="col-sm-10 col-md-6">
+                        <p class="form-control-static">{{ user.email }}</p>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 col-md-6 control-label">Rol</label>
+                    <div class="col-sm-10 col-md-6">
+                        {% for role in user.roles %}
+                        <p class="form-control-static">{{ role }}</p>
+                        {% endfor %}
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 col-md-6 control-label">Ultimo acceso</label>
+                    <div class="col-sm-10 col-md-6">
+                        <p class="form-control-static">{% if user.lastLogin %}{{ user.lastLogin|date('Y-m-d H:i') }}{% else %}nunca{% endif %}</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-md-12 form-group">
+                <label class="col-sm-3 col-xs-6 control-label">Creaciones</label> 
+                <div class="col-xs-12">
+                    {% if user.creations|length > 0 %}
+                        {% for iField in user.creations %} 
+                        <p class="form-control-static"><a href="{{ path('teg_show', { 'id': iField.id }) }}">{{ iField }}</a></p>{% endfor %}
+                    {% else %}
+                        <p class="form-control-static alert-warning">Este usuario no posee TEG's creadas</p>
+                    {% endif %} 
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <label class="col-sm-2 col-md-6 control-label">{{ 'profile.show.email'|trans }}</label>
-        <div class="col-sm-10 col-md-6">
-            <p class="form-control-static">{{ user.email }}</p>
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="col-sm-2 col-md-6 control-label">Rol</label>
-        <div class="col-sm-10 col-md-6">
-            {% for role in user.roles %}
-            <p class="form-control-static">{{ role }}</p>
-            {% endfor %}
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="col-sm-2 col-md-6 control-label">Ultimo acceso</label>
-        <div class="col-sm-10 col-md-6">
-            <p class="form-control-static">{% if user.lastLogin %}{{ user.lastLogin|date('Y-m-d H:i') }}{% else %}nunca{% endif %}</p>
-        </div>
-    </div>
-</div>
-    <div class="col-md-6 col-md-12 form-group">
-        <label class="col-sm-3 col-xs-6 control-label">Creaciones</label> 
-        <div class="col-xs-12">
-            {% if user.creations|length > 0 %}
-                {% for iField in user.creations %} 
-                <p class="form-control-static"><a href="{{ path('teg_show', { 'id': iField.id }) }}">{{ iField }}</a></p>{% endfor %}
+        {% if app.user.id == user.id %}
+        <hr>
+        <a class="btn btn-warning" href="{{ path('fos_user_profile_edit') }}"><i class="fa fa-pencil-square-o fa-lg"></i> Editar</a>
+
+        <a class="btn btn-primary" href="{{ path('fos_user_change_password') }}">Cambiar contraseña</a>
+
+        <a style="float: right;" class="btn btn-default" href="{{ path('fos_user_security_logout') }}"><i class="fa fa-sign-out fa-fw"></i>&nbsp;Salir</a>
+        {% else %}
+            {% if not user.enabled %}
+                <a href="{{ path('user_show', { id: user.id }) }}" class="btn btn-sm btn-success">
+                    <i class="fa fa-check"></i>&nbsp;Confirmar cuenta</a>
             {% else %}
-                <p class="form-control-static alert-warning">Este usuario no posee TEG's creadas</p>
-            {% endif %} 
-        </div>
+                {% if not user.locked %}
+                    <a href="{{ path('user_toblock', { id: user.id }) }}" class="btn btn-sm btn-danger">
+                        <i class="fa fa-lock"></i>&nbsp;Bloquear</a>
+                {% else %}
+                    <a href="{{ path('user_toblock', { id: user.id }) }}" class="btn btn-sm btn-default">
+                        <i class="fa fa-unlock"></i>&nbsp;Desbloquear</a>
+                {% endif %}
+            {% endif %}
+                <a href="{{ path('user_show', { id: user.id }) }}" class="btn btn-sm btn-warning">
+                    <i class="fa fa-edit"></i>&nbsp;Editar</a>
+        {% endif %}
+
     </div>
 </div>
-{% if app.user.id == user.id %}
-<hr>
-<a class="btn btn-warning" href="{{ path('fos_user_profile_edit') }}"><i class="fa fa-pencil-square-o fa-lg"></i> Editar</a>
-
-<a class="btn btn-primary" href="{{ path('fos_user_change_password') }}">Cambiar contraseña</a>
-
-<a style="float: right;" class="btn btn-default" href="{{ path('fos_user_security_logout') }}"><i class="fa fa-sign-out fa-fw"></i>&nbsp;Salir</a>
-{% endif %}
-
-</div></div>
