--- a/src/Biblioteca/UserBundle/Resources/views/Profile/show_content.html.twig
+++ b/src/Biblioteca/UserBundle/Resources/views/Profile/show_content.html.twig
@@ -72,8 +72,10 @@
                 {{ form_widget(operation_form._token) }}
                 {{ form_end(operation_form, {'render_rest': false}) }}
             {% endif %}
-                {#<a href="{{ path('user_show', { id: user.id }) }}" class="btn btn-sm btn-warning">
-                    <i class="fa fa-edit"></i>&nbsp;Editar</a>#}
+                {# Proximamente
+                <a href="{{ path('user_edit', { id: user.id }) }}" class="btn btn-sm btn-warning">
+                    <i class="fa fa-edit"></i>&nbsp;Editar</a>
+                #}
         {% endif %}
 
     </div>
