corrección de vista de capitulos de prueba.

--- a/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
@@ -379,7 +379,7 @@
 
 $('#biblioteca_tegbundle_teg_capitulos_0_file,#biblioteca_tegbundle_teg_capitulos_1_file,#biblioteca_tegbundle_teg_capitulos_2_file,#biblioteca_tegbundle_teg_capitulos_3_file,#biblioteca_tegbundle_teg_capitulos_4_file').fileinput({
     language: 'es',
-    uploadUrl: '#',
+    //uploadUrl: '#',
     allowedFileExtensions : ['pdf'],
     showUpload: false,
     showClose:false
